snapshot-tests/tests/snapshots/parser__bad_keys__cr.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidCharInString]: invalid character in string: `\r`
  ┌─ cr:1:2
  │
1 │ ""|=3
  │   invalid character '\r' in string
