snapshot-tests/tests/snapshots/parser__bad_keys__multi_line.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[multiline-string-key]: 
  ┌─ multi_line:1:1
  │
1 │ ''''''=3
  │ ^^^^^^ multiline keys are not allowed
