snapshot-tests/tests/snapshots/parser__bad_keys__newline.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected an equals, found a newline at key
  ┌─ newline:1:4
  │  
1 │   key
  │ ╭───^
2 │ │ =3
  │ ╰^ expected an equals
